objects/ssot__CareBarrierType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareBarrierCodeText__c</fullName>
        <label>Care Barrier Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareBarrierCodeType__c</fullName>
        <label>Care Barrier Code Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisCodeSetBundleId__c</fullName>
        <label>Diagnosis Code Set Bundle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisCodeSetId__c</fullName>
        <label>Diagnosis Code Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthCareDiagnosisId__c</fullName>
        <label>Healthcare Diagnosis</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Barrier Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721832140_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareBarrierType_DiagnosisCodeSetBund_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareBarrierType_DiagnosisCodeSetBund_rel</relationshipLabel>
        <relationshipName>rel_1716721832140_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721833077_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareBarrierType_DiagnosisCodeSetId_m_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CareBarrierType_DiagnosisCodeSetId_m_rel</relationshipLabel>
        <relationshipName>rel_1716721833077_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726578934_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareBarrierType_HealthCareDiagnosisI_rel</label>
        <referenceTo>ssot__HealthcareDiagnosis__dlm</referenceTo>
        <relationshipLabel>CareBarrierType_HealthCareDiagnosisI_rel</relationshipLabel>
        <relationshipName>rel_1716726578934_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>